--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,25 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
+  position: absolute;
+  left: 0;
+  top: 0;
   pointer-events: none;
+}
+
+.footer {
+  background-color: #282c34;
+  color: white;
+  text-align: center;
+  margin-top: 0;
+  padding-bottom: 0;
+}
+
+.rowc {
+  display: flex;
+  flex-direction: row;
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,12 +32,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(50px + 2vmin);
   color: white;
 }
 
